--- a/sugarclient/src/components/Wall/style.css
+++ b/sugarclient/src/components/Wall/style.css
@@ -13,6 +13,8 @@
 ::-webkit-scrollbar-track {
     border: 1px solid rgb(225, 239, 255);
     border-radius: 6px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: inset 0 0 10px;
 }
     
 ::-webkit-scrollbar-thumb {
