--- a/sugarclient/src/App.css
+++ b/sugarclient/src/App.css
@@ -20,3 +20,9 @@
 .App-link {
   color: #09d3ac;
 }
+.cover {
+  width: 100%;
+  height: 160px;
+  margin-bottom: -150px;
+  background-color: #03a9f4;
+}
