--- a/sugarclient/src/components/Projects/style.css
+++ b/sugarclient/src/components/Projects/style.css
@@ -1,5 +1,6 @@
 .title {
     height: 1000px;
     border-radius: 8px;
-    border: 1px solid rgb(220, 232, 238)
+    border: 1px solid rgb(220, 232, 238);
+    overflow: scroll;
 }
