--- a/sugarclient/src/App.css
+++ b/sugarclient/src/App.css
@@ -15,6 +15,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .App-link {
@@ -24,5 +25,7 @@
   width: 100%;
   height: 160px;
   margin-bottom: -150px;
-  background-color: #03a9f4;
+  background-color: #bbdefb;
+  font-family: 'Courier New', Courier, monospace;
 }
+
