--- a/client/src/components/View/style.css
+++ b/client/src/components/View/style.css
@@ -9,7 +9,7 @@
 
 .centertitle {
     width: 100%;
-    background-color: #cecece;
+    background-color: #ececec;
     height: 140px;
     border-radius: 6px;
     margin-top: -30px;
